# wellness-project

./: Career Compass.md  Code Mentor.md  Health Mate.md  Project Pilot.md  README.md
Wellbeing Coach/: .coverage  README.md  pyproject.toml  pytest.ini  versel.json
Wellbeing Coach/app/: main.py
Wellbeing Coach/app/db/: db_connection.py
Wellbeing Coach/app/models/: analysemodel.py
Wellbeing Coach/app/routes/: __init__.py  analyze_suggest.py  feedback_history.py  health_routes.py
Wellbeing Coach/tests/: conftest.py
Wellbeing Coach/tests/integration/: test_integration_analyze_suggest.py  test_integration_db_connection.py  test_integration_feedback_history.py
Wellbeing Coach/tests/unit/: test_unit_analyze_suggest.py  test_unit_db_connection.py  test_unit_feedback_history.py
